--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/tv_pleaselogin_id"
                 android:text="Please Login"
                 android:textSize="35dp"
-                android:textColor="#00F"
+                android:textColor="#FFFFFF"
                 android:textStyle="bold"/>
 
 
