--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DetailsActivity"
-    android:background="@drawable/dtlspp">
+    android:background="#ffffff">
 
 
 
@@ -33,15 +33,14 @@
                     android:text="Please fill in the details required"
                     android:textStyle="italic"
                     android:textSize="17dp"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="50dp"
-                    android:background="#8A4B08"
                     android:paddingRight="15dp"
                     android:paddingLeft="15dp"/>
 
 
-                <EditText
+                 <EditText
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/et_enteryourcountry"
@@ -49,10 +48,11 @@
                     android:layout_marginTop="30dp"
                     android:layout_below="@id/tv_regdetails_id"
                     android:layout_marginLeft="20dp"
-                    android:background="#ffffff"
+                    android:background="@drawable/edittexts_border"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:paddingBottom="15dp"/>
+                    android:paddingBottom="15dp"
+                    android:textAlignment="center"/>
 
 
                 <EditText
@@ -63,10 +63,11 @@
                     android:layout_marginTop="30dp"
                     android:layout_below="@id/et_enteryourcountry"
                     android:layout_marginLeft="20dp"
-                    android:background="#ffffff"
+                    android:background="@drawable/edittexts_border"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:paddingBottom="15dp"/>
+                    android:paddingBottom="15dp"
+                    android:textAlignment="center"/>
 
 
                 <EditText
@@ -76,11 +77,12 @@
                     android:layout_below="@id/et_enteryourfname_id"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="28dp"
-                    android:background="#ffffff"
+                    android:background="@drawable/edittexts_border"
                     android:hint="Enter your last name"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:paddingBottom="15dp" />
+                    android:paddingBottom="15dp"
+                    android:textAlignment="center"/>
 
 
 
@@ -92,10 +94,11 @@
                     android:layout_marginTop="30dp"
                     android:layout_below="@id/et_enteryourlastname_id"
                     android:layout_marginLeft="20dp"
-                    android:background="#ffffff"
+                    android:background="@drawable/edittexts_border"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:paddingBottom="15dp"/>
+                    android:paddingBottom="15dp"
+                    android:textAlignment="center"/>
 
 
 
@@ -107,11 +110,12 @@
                     android:layout_marginTop="30dp"
                     android:layout_below="@id/et_enteryourusername_id"
                     android:layout_marginLeft="20dp"
-                    android:background="#ffffff"
+                    android:background="@drawable/edittexts_border"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
                     android:paddingBottom="15dp"
-                    android:inputType="textEmailAddress"/>
+                    android:inputType="textEmailAddress"
+                    android:textAlignment="center"/>
 
 
 
@@ -123,11 +127,12 @@
                     android:layout_marginTop="30dp"
                     android:layout_below="@id/et_enteryouremailaddress_id"
                     android:layout_marginLeft="20dp"
-                    android:background="#ffffff"
+                    android:background="@drawable/edittexts_border"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
                     android:paddingBottom="15dp"
-                    android:inputType="number"/>
+                    android:inputType="number"
+                    android:textAlignment="center"/>
 
 
 
@@ -139,10 +144,11 @@
                     android:layout_marginTop="30dp"
                     android:layout_below="@id/et_enteryourphonenumber_id"
                     android:layout_marginLeft="20dp"
-                    android:background="#ffffff"
+                    android:background="@drawable/edittexts_border"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:paddingBottom="15dp"/>
+                    android:paddingBottom="15dp"
+                    android:textAlignment="center"/>
 
 
 
@@ -154,10 +160,11 @@
                     android:layout_marginTop="30dp"
                     android:layout_below="@id/et_enteryourpassword_id"
                     android:layout_marginLeft="20dp"
-                    android:background="#ffffff"
+                    android:background="@drawable/edittexts_border"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:paddingBottom="15dp"/>
+                    android:paddingBottom="15dp"
+                    android:textAlignment="center"/>
 
 
                 <Button
@@ -170,7 +177,7 @@
                     android:layout_marginTop="30dp"
                     android:textColor="#ffffff"
                     android:textStyle="bold"
-                    android:background="#8A4B08"
+                    android:background="@drawable/submit_border"
                     android:textAllCaps="false"/>
 
 
@@ -185,7 +192,7 @@
                     android:layout_marginTop="30dp"
                     android:textColor="#ffffff"
                     android:textStyle="bold"
-                    android:background="#8A4B08"
+                    android:background="@drawable/buttons_border"
                     android:textAllCaps="false"/>
 
                 <TextView
