--- a/app/src/main/res/layout/activity_getjob.xml
+++ b/app/src/main/res/layout/activity_getjob.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GetjobActivity"
-    android:background="#48C9B0">
+    android:background="#ffffff">
 
 
 
