--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -8,6 +8,12 @@
     android:background="#ffffff">
 
 
+    <LinearLayout
+        android:layout_width="350dp"
+        android:layout_height="match_parent"
+        android:id="@+id/ll_content_border_id"
+        android:background="@drawable/content_border">
+
 
 
     <RelativeLayout
@@ -23,7 +29,10 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/rl_content_id">
+                android:id="@+id/rl_content_id"
+                android:background="@drawable/content_border"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp">
 
 
                 <TextView
@@ -52,7 +61,8 @@
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
                     android:paddingBottom="15dp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                     android:layout_centerHorizontal="true"/>
 
 
                 <EditText
@@ -67,7 +77,9 @@
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
                     android:paddingBottom="15dp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:layout_centerHorizontal="true"
+                    android:inputType="textPersonName"/>
 
 
                 <EditText
@@ -82,7 +94,9 @@
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
                     android:paddingBottom="15dp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:layout_centerHorizontal="true"
+                    android:inputType="textPersonName"/>
 
 
 
@@ -98,7 +112,9 @@
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
                     android:paddingBottom="15dp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:layout_centerHorizontal="true"
+                    android:inputType="textPersonName"/>
 
 
 
@@ -115,7 +131,8 @@
                     android:paddingRight="15dp"
                     android:paddingBottom="15dp"
                     android:inputType="textEmailAddress"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:layout_centerHorizontal="true"/>
 
 
 
@@ -132,7 +149,8 @@
                     android:paddingRight="15dp"
                     android:paddingBottom="15dp"
                     android:inputType="number"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:layout_centerHorizontal="true"/>
 
 
 
@@ -148,7 +166,9 @@
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
                     android:paddingBottom="15dp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:layout_centerHorizontal="true"
+                    android:inputType="textPassword"/>
 
 
 
@@ -164,7 +184,9 @@
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
                     android:paddingBottom="15dp"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:layout_centerHorizontal="true"
+                    android:inputType="textPassword"/>
 
 
                 <Button
@@ -217,5 +239,6 @@
         </ScrollView>
 
     </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
