--- a/app/src/main/res/layout/activity_getjob.xml
+++ b/app/src/main/res/layout/activity_getjob.xml
@@ -5,11 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GetjobActivity"
-    android:background="#ffffff">
+    android:background="@drawable/content_border"
+    android:padding="6dp">
 
 
-
-
-
-
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"/>
 </RelativeLayout>
