--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,16 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
-    android:background="#ffffff">
+    android:background="@drawable/content_border">
 
 
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
         android:id="@+id/ll_logdetails1_id"
         android:orientation="vertical"
-        android:weightSum="10">
+        android:weightSum="10"
+        android:background="@drawable/content_border"
+        android:layout_marginLeft="10dp">
 
 
         <LinearLayout
@@ -55,7 +57,8 @@
             android:id="@+id/ll_logdetails3_id"
             android:layout_weight="5"
             android:orientation="vertical"
-            android:padding="8dp">
+            android:padding="8dp"
+            android:background="@drawable/content_border">
 
             <EditText
                 android:layout_width="250dp"
@@ -65,9 +68,9 @@
                 android:textColor="@color/colorPrimary"
                 android:background="@drawable/edittexts_border"
                 android:layout_marginTop="30dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="32dp"
                 android:textAlignment="center"
-                />
+                android:inputType="number"/>
 
             <EditText
                 android:layout_width="250dp"
@@ -77,8 +80,9 @@
                 android:textColor="@color/colorPrimary"
                 android:background="@drawable/edittexts_border"
                 android:layout_marginTop="30dp"
-                android:layout_marginStart="10dp"
-                android:textAlignment="center"/>
+                android:layout_marginStart="32dp"
+                android:textAlignment="center"
+                android:inputType="textPersonName"/>
 
             <EditText
                 android:layout_width="250dp"
@@ -88,8 +92,9 @@
                 android:textColor="@color/colorPrimary"
                 android:background="@drawable/edittexts_border"
                 android:layout_marginTop="30dp"
-                android:layout_marginStart="10dp"
-                android:textAlignment="center"/>
+                android:layout_marginStart="32dp"
+                android:textAlignment="center"
+                android:inputType="textPassword"/>
 
 
         </LinearLayout>
@@ -99,7 +104,8 @@
             android:layout_height="0dp"
             android:layout_weight="3"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+          >
 
             <Button
                 android:layout_width="120dp"
