--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#0000ff</item>
-        <item name="colorPrimaryDark">#0000ff</item>
+        <item name="colorPrimary">#0000FF</item>
+        <item name="colorPrimaryDark">#0404B4</item>
         <item name="colorAccent">#0B6138</item>
     </style>
 
