--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -40,8 +40,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tv_regdetails_id"
-                    android:text="Please fill in the details required"
-                    android:textStyle="italic"
+                    android:text="Please fill in all details required"
+                    android:textStyle="normal"
                     android:textSize="17dp"
                     android:textColor="#000000"
                     android:layout_centerHorizontal="true"
