--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,12 +10,11 @@
 
 
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/ll_logdetails1_id"
         android:orientation="vertical"
         android:weightSum="10"
-        android:background="@drawable/content_border"
         android:layout_marginLeft="10dp">
 
 
@@ -27,26 +26,16 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tv_pleaselogin_id"
-                android:text="Please Login"
-                android:textSize="35dp"
-                android:textColor="#000000"
-                android:textStyle="bold"/>
-
-
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_enterdetailshere_id"
-                android:text="Enter your details here"
+                android:text="Enter your details to login"
                 android:textSize="20dp"
                 android:layout_marginTop="20dp"
                 android:textColor="#000000"
-                android:textStyle="italic"/>
+                android:textStyle="normal"/>
 
         </LinearLayout>
 
@@ -55,10 +44,10 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/ll_logdetails3_id"
-            android:layout_weight="5"
+            android:layout_weight="3"
             android:orientation="vertical"
-            android:padding="8dp"
-            android:background="@drawable/content_border">
+            android:layout_marginTop="5dp"
+            android:gravity="center">
 
             <EditText
                 android:layout_width="250dp"
@@ -67,8 +56,6 @@
                 android:hint="Enter phone number"
                 android:textColor="@color/colorPrimary"
                 android:background="@drawable/edittexts_border"
-                android:layout_marginTop="30dp"
-                android:layout_marginStart="32dp"
                 android:textAlignment="center"
                 android:inputType="number"/>
 
@@ -79,8 +66,7 @@
                 android:hint="Enter user name"
                 android:textColor="@color/colorPrimary"
                 android:background="@drawable/edittexts_border"
-                android:layout_marginTop="30dp"
-                android:layout_marginStart="32dp"
+               android:layout_marginTop="10dp"
                 android:textAlignment="center"
                 android:inputType="textPersonName"/>
 
@@ -91,8 +77,7 @@
                 android:hint="Enter password"
                 android:textColor="@color/colorPrimary"
                 android:background="@drawable/edittexts_border"
-                android:layout_marginTop="30dp"
-                android:layout_marginStart="32dp"
+                android:layout_marginTop="10dp"
                 android:textAlignment="center"
                 android:inputType="textPassword"/>
 
@@ -102,28 +87,48 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3"
+            android:layout_weight="1"
+            android:padding="10dp"
             android:orientation="horizontal"
             android:gravity="center"
-          >
+            android:layout_marginTop="5dp">
 
             <Button
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
+                android:layout_width="235dp"
+                android:layout_height="28dp"
                 android:id="@+id/bt_submit2_id"
-                android:padding="8dp"
+                android:padding="5dp"
                 android:text="Submit"
-                android:background="@drawable/submit_border"
+                android:background="#0080ff"
                 android:textColor="#fff"
                 android:textAllCaps="false"/>
 
-            <Button
-                android:layout_width="120dp"
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/tv_accountrequest_id"
+                android:padding="5dp"
+                android:text="You dont have an account?"
+                android:textColor="#0000ff" />
+
+            <Button
+                android:layout_width="130dp"
+                android:layout_height="28dp"
                 android:id="@+id/bt_createaccount_id"
-                android:padding="8dp"
+                android:padding="5dp"
                 android:text="Create Account"
-                android:background="@drawable/buttons_border"
+                android:background="#0080ff"
                 android:textColor="#fff"
                 android:layout_marginStart="10dp"
                 android:textAllCaps="false"/>
