--- a/app/src/main/res/layout/activity_jobpage.xml
+++ b/app/src/main/res/layout/activity_jobpage.xml
@@ -13,7 +13,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rl_content_border_id"
-    android:background="@drawable/content_border"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp">
 
@@ -24,9 +23,8 @@
         android:layout_height="match_parent"
         android:id="@+id/ll_logdetails1_id"
         android:orientation="vertical"
-        android:weightSum="7"
-        android:gravity="center"
-        android:layout_marginTop="25dp">
+        android:weightSum="6"
+        android:gravity="center">
 
 
     <LinearLayout
@@ -36,7 +34,7 @@
         android:layout_weight="3"
         android:gravity="center"
         android:orientation="vertical"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="20dp">
 
 
         <ImageView
@@ -44,10 +42,22 @@
             android:layout_height="220dp"
             android:id="@+id/iv_imageprofile_id"
             android:padding="5dp"
-            android:src="@drawable/ppimage"/>
+            android:src="@drawable/ppimage"
+            android:background="@drawable/image_border"/>
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="28dp"
+            android:id="@+id/bt_upload_id"
+            android:text="Upload Profile"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:background="#0080ff"
+            android:layout_marginTop="20dp"
+            android:textAllCaps="false"/>
+
 
     </LinearLayout>
-
 
 
 
@@ -55,65 +65,35 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/ll_logdetails3_id"
-        android:layout_weight="5"
+        android:layout_weight="2"
         android:orientation="vertical"
-        android:padding="8dp">
-
-        <Button
-            android:layout_width="110dp"
-            android:layout_height="45dp"
-            android:id="@+id/bt_upload_id"
-            android:text="Upload Profile"
-            android:textColor="#ffffff"
-            android:textStyle="bold"
-            android:background="@drawable/buttons_border"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="90dp"
-            android:textAllCaps="false"/>
+        android:padding="8dp"
+        android:gravity="center">
 
 
         <Button
-            android:layout_width="250dp"
-            android:layout_height="45dp"
             android:id="@+id/bt_postjob_id"
-            android:text="Post Available Job"
-            android:textStyle="bold"
+            android:layout_width="250dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="20dp"
+            android:background="#0080ff"
+            android:text="Post Ready Jobs"
+            android:textAllCaps="false"
             android:textColor="#ffffff"
-            android:background="@drawable/buttons_border"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="20dp"
-            android:textAllCaps="false"/>
+            android:textStyle="bold" />
 
 
 
         <Button
             android:layout_width="250dp"
-            android:layout_height="45dp"
+            android:layout_height="28dp"
             android:id="@+id/bt_getjob_id"
-            android:text="Get Available Job"
+            android:text="Get Posted Jobs"
             android:textStyle="bold"
             android:textColor="#ffffff"
-            android:background="@drawable/buttons_border"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginTop="40dp"
+           android:background="#0080ff"
             android:textAllCaps="false"/>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     </LinearLayout>
 
