--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,7 +87,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:padding="10dp"
             android:orientation="horizontal"
             android:gravity="center"
@@ -109,7 +109,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:orientation="horizontal"
             android:gravity="center"
             android:layout_marginTop="5dp">
@@ -120,10 +120,11 @@
                 android:id="@+id/tv_accountrequest_id"
                 android:padding="5dp"
                 android:text="You dont have an account?"
-                android:textColor="#0000ff" />
+                android:textColor="#0000ff"
+                android:layout_marginBottom="10dp"/>
 
             <Button
-                android:layout_width="130dp"
+                android:layout_width="120dp"
                 android:layout_height="28dp"
                 android:id="@+id/bt_createaccount_id"
                 android:padding="5dp"
@@ -131,7 +132,8 @@
                 android:background="#0080ff"
                 android:textColor="#fff"
                 android:layout_marginStart="10dp"
-                android:textAllCaps="false"/>
+                android:textAllCaps="false"
+                android:layout_marginBottom="10dp"/>
 
         </LinearLayout>
 
