--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#58ACFA">
+    android:background="#ffffff">
 
 
     <TextView
@@ -23,7 +23,7 @@
         android:id="@+id/tv_getname_id"
         android:text="Name"
         android:textSize="16dp"
-        android:textColor="#ffffff"
+        android:textColor="#0000ff"
         android:layout_marginTop="40dp"
        android:layout_marginLeft="120dp"/>
 
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/tv_getcountry1_id"
         android:text="Country"
-        android:textColor="#ffffff"
+        android:textColor="#0000ff"
         android:layout_below="@+id/tv_getname_id"
         android:textSize="16dp"
         android:layout_marginLeft="120dp"
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/tv_getlocation_id"
         android:text="Location/City/Town"
-        android:textColor="#ffffff"
+        android:textColor="#0000ff"
         android:layout_below="@+id/tv_getlocation2_id"
         android:textSize="16dp"
         android:layout_centerHorizontal="true"
@@ -100,7 +100,7 @@
         android:textSize="16dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:textColor="#ffffff"/>
+        android:textColor="#0000ff"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -120,7 +120,7 @@
         android:textSize="16dp"
         android:text="The type of job to be done"
         android:layout_below="@+id/tv_getjobdescription2_id"
-        android:textColor="#ffffff"
+        android:textColor="#0000ff"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"/>
 
@@ -144,7 +144,7 @@
         android:textSize="16dp"
         android:text="The Duration of Employment"
         android:layout_below="@+id/tv_getdescribethetermsofemployment2"
-        android:textColor="#ffffff"
+        android:textColor="#0000ff"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"/>
 
@@ -168,7 +168,7 @@
         android:text="Requirements/skills needed"
         android:layout_below="@+id/tv_getskillsandrequrements2_id"
         android:textSize="16dp"
-        android:textColor="#ffffff"
+        android:textColor="#0000ff"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"/>
 
