--- a/app/src/main/res/layout/activity_getjob.xml
+++ b/app/src/main/res/layout/activity_getjob.xml
@@ -5,14 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GetjobActivity"
-    android:background="@drawable/content_border"
-    android:padding="6dp">
+    android:background="@drawable/content_border">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include
+            layout="@layout/toolbar"
+            android:id="@+id/toolbar"/>
+
+    </RelativeLayout>
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="60dp"/>
 </RelativeLayout>
