--- a/app/src/main/res/layout/activity_job.xml
+++ b/app/src/main/res/layout/activity_job.xml
@@ -8,13 +8,18 @@
     android:background="@drawable/content_border">
 
 
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/toolbar"/>
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rl_scrollview2_id"
-        android:background="@drawable/content_border"
         android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp">
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="60dp">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -100,7 +105,7 @@
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/et_personlocation_id"
-                    android:hint="Describe location here"
+                    android:hint="Enter location/city/town where you are located in"
                     android:layout_marginTop="20dp"
                     android:layout_marginLeft="20dp"
                     android:layout_below="@id/tv_location_id"
@@ -131,7 +136,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="31dp"
                     android:background="@drawable/edittexts_border"
-                    android:hint="Enter phone number"
+                    android:hint="Enter phone number here"
                     android:inputType="number"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
@@ -158,7 +163,7 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/edittexts_border"
-                    android:hint="Description here"
+                    android:hint="Give a description about a job to be done and the type of job"
                     android:paddingLeft="20dp"
                     android:paddingBottom="70dp"
                     android:textAlignment="center" />
@@ -181,7 +186,7 @@
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/et_personduration_id"
-                    android:hint="Describe the duration here"
+                    android:hint="Describe the type of Employment whether Permanent/casual"
                     android:layout_below="@id/tv_describethetermsofemployment"
                     android:layout_marginTop="20dp"
                     android:layout_marginLeft="20dp"
@@ -205,7 +210,7 @@
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/et_personrequirements_id"
-                    android:hint="Describe requirements here"
+                    android:hint="Describe requirements or the skills needed from the person"
                     android:layout_below="@id/tv_skillsandrequrements_id"
                     android:layout_marginTop="20dp"
                     android:layout_marginLeft="20dp"
