--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,17 @@
     tools:context=".LoginActivity"
     android:background="@drawable/content_border">
 
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/toolbar"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp">
+
+    </RelativeLayout>
+
 
 
     <LinearLayout
@@ -22,9 +33,10 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/ll_logdetails2_id"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="70dp">
 
 
             <TextView
@@ -44,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/ll_logdetails3_id"
-            android:layout_weight="3"
+            android:layout_weight="4"
             android:orientation="vertical"
             android:layout_marginTop="5dp"
             android:gravity="center">
