--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -137,24 +137,31 @@
         android:orientation="horizontal">
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp">
 
 
+        <Button
+            android:id="@+id/btcall"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="200dp"
+            android:background="@drawable/ic_call_24dp"
+            android:layout_marginTop="20dp">
+
+        </Button>
 
         <TextView
+            android:id="@+id/tv_getphonenumber2_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_getphonenumber2_id"
+            android:layout_marginLeft="20dp"
             android:text="Phone number"
-            android:textSize="20dp"
             android:textColor="#000000"
-            android:layout_marginTop="25dp"
-            android:layout_marginLeft="20dp" >
+            android:textSize="20dp">
 
         </TextView>
 
@@ -165,13 +172,14 @@
             android:text="Phone number"
             android:textColor="#111111"
             android:textSize="14dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="23dp"
             >
 
         </TextView>
 
-    </LinearLayout>
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
